# HCSIM

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
datasets/hcCNA-bench-large/BAF/: BAF-0.1x.csv  BAF-0.2x.csv  BAF-0.5x.csv  BAF-1x.csv  BAF-2x.csv  BAF-5x.csv
datasets/hcCNA-bench-large/RDR/: RDR-0.1x.csv  RDR-0.2x.csv  RDR-0.5x.csv  RDR-1x.csv  RDR-2x.csv  RDR-5x.csv
datasets/hcCNA-bench-large/profile/: barcodes.txt  changes.csv  cna_profile.csv  maternal_cna_matrix.csv  mirrored_subclonal_cnas.csv  paternal_cna_matrix.csv
datasets/hcbench-example-data/data/: chisel_2x_500kb_combined_cnv.csv  chisel_5x_500kb_combined_cnv.csv  chisel_5x_combined_cnv.csv  chisel_5x_maternal_cnv.csv  chisel_5x_paternal_cnv.csv  clustering_result.csv  ground_truth_maternal_cnv.csv  ground_truth_paternal_cnv.csv  profile_combined_cnv_500kb.csv
datasets/hcbench-example-data/output/: AMI_ARI_results.csv  bin_level_results.csv  cnstates_results.csv  evolution_cn_stability_acc.csv  evolution_onset_CN_Change.csv  (+3 more)
docs/: conf.py  contributors.md  index.md  release-notes.md  tutorials.md
docs/man/: hcbench-cnaccuracy.md  hcbench-cnretain.md  hcbench-cnstates.md  hcbench-hcCNchange.md  hcbench-hcidentify.md  hcbench-hcparent.md  hcbench-mirrorsubclone.md  hcbench-subdetect.md  hcsim-align.md  hcsim-baf.md  hcsim-bcbam.md  hcsim-downsam.md  hcsim-gfasta.md  hcsim-gfastq.md  hcsim-gprofile.md  hcsim-pbam.md  hcsim-rdr.md  hcsim-sim.md
example/: ignore.txt
src/hcsim/: __init__.py  chisel_utils.py  generate_barcode_bam.py  main.py  random_tree.py  utils.py
(+85 files in other folders)
